--- a/subgraphs/masterchef/package.json
+++ b/subgraphs/masterchef/package.json
@@ -7,9 +7,9 @@
         "codegen": "graph codegen masterchef.yaml",
         "build": "graph build masterchef.yaml",
         "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sushiswap/masterchef masterchef.yaml",
-        "create-local": "graph create --node http://localhost:8020/ /sushiswap/sushiswap",
-        "remove-local": "graph remove --node http://localhost:8020/ /sushiswap/sushiswap",
-        "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 /sushiswap/sushiswap",
+        "create-local": "graph create --node http://localhost:8020/ openswap/masterchef masterchef.yaml",
+        "remove-local": "graph remove --node http://localhost:8020/ openswap/masterchef masterchef.yaml",
+        "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 openswap/masterchef masterchef.yaml",
         "prepare:bsc": "mustache config/bsc.json masterchef.template.yaml > masterchef.yaml",
         "prepare:fantom": "mustache config/fantom.json masterchef.template.yaml > masterchef.yaml",
         "prepare:goerli": "mustache config/goerli.json masterchef.template.yaml > masterchef.yaml",
